# TraditionalStitch

./: .gitlab-ci.yml  CMakeLists.txt  ReadMe.md
HomoStitch/: CMakeLists.txt  ReadMe.txt
HomoStitch/common/: Projection.h  common.h  spdloghelper.cpp  spdloghelper.h
HomoStitch/doc/: BA.eddx  ~$moStitch拼接算法.docx  ~WRL3793.tmp  内点重叠检测.eddx  平移模式.eddx  最大生成树.eddx  柱面投影.eddx  柱面拼接投影反算.eddx  柱面模式.eddx
HomoStitch/include/Blend/: BlendBase.h  LineBlender.h  MultiBlender.h
HomoStitch/include/StitchFilter/: PointInPolygon.h  StitchFilter.h
HomoStitch/include/StitichBase/: StitchBase.h
HomoStitch/include/StitichBase/Cylinder/: CylinderStitcher.h  CylinderWarp.h
HomoStitch/include/StitichBase/Estimate/: Camera.h  EstimateStitcher.h  IncrementalBundleAdjuster.h
HomoStitch/include/StitichBase/Trans/: TransStitcher.h
HomoStitch/src/Blend/: BlendBase.cpp  LineBlender.cpp  MultiBlender.cpp
HomoStitch/src/StitchFilter/: PointInPolygon.cpp  StitchFilter.cpp
HomoStitch/src/StitichBase/: StitchBase.cpp
HomoStitch/src/StitichBase/Cylinder/: CylinderStitcher.cpp  CylinderWarp.cpp
HomoStitch/src/StitichBase/Estimate/: Camera.cpp  EstimateStitcher.cpp  IncrementalBundleAdjuster.cpp
HomoStitch/src/StitichBase/Trans/: TransStitcher.cpp
example/: HomoStitchTest.cpp
